syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto.stream";

import "base.proto";

package proto.stream;

message UpMessage {
	oneof either {	
		bytes header = 1;
		bytes block = 2;
		ErrorProto error = 3;
		VoidProto eos = 4;
		VoidProto dummy = 5;
		uint64 offset = 6;
	}
}
message DownMessage {
	oneof either {
		bytes result = 1;
		bytes block = 2;
		ErrorProto error = 3;
		VoidProto eos = 4;
		VoidProto dummy = 5;
		uint64 offset = 6;
	}
}


enum MessageType {
	DATA = 0;
	GRPC_ERROR = 1;
	CLOSE = 2;
}
message MultiChannelUpMessage {
	int32 channel_id = 1;
	MessageType type = 2;
	UpMessage msg = 3;
}
message MultiChannelDownMessage {
	int32 channel_id = 1;
	MessageType type = 2;
	DownMessage msg = 3;
}

service StreamService {
	rpc download(stream UpMessage) returns (stream DownMessage);
	rpc upload(stream UpMessage) returns (DownMessage);
	rpc upAndDownload(stream MultiChannelUpMessage) returns (stream MultiChannelDownMessage);
	
	rpc upload_server_cancel(stream UpMessage) returns (stream DownMessage);
//	rpc upndown_fail_0(stream UpRequestDownResponse) returns (stream UpResponseDownRequest);
}

message UploadServerCancelTest {
	string path = 1;
	int32 offset = 2;
}